* PowerMockIgnore is now taken into account when using the Java Agent PowerMockRule.
* Improved java agent automatic bootstrap mechanism to work better for newer JDK's.
* Improved Java 8 support. PowerMock now finds default methods (issue 513).
* Annotations such as @Mock and @InjectMocks can now be used with the JUnit Java Agent.

Change log 1.5.5 (2014-05-28)
-----------------------------
* Updated OSGi metadata
* MockClassLoader.getResources no longer loads same file twice (thanks to Kelsey Rider for the patch)
* Added getResourceAsStream and getResource to DeferSupportingClassLoader which defers loading to the deferring classloader.
* Added ability to adjust the classpath when running the a test using the @UseClassPathAdjuster annotation. This is useful when integrating PowerMock with certain third-party JUnit runners (thanks to Jonas Berlin for the patch).
* Upgraded to Javassist 3.18.2-GA.
* Moved project to github (issue 493).
* Upgraded to TestNG 6.8.8.
* Removed accidental JUnit dependency to Objenesis and XStream classloading projects.

Change log 1.5.4 (2014-01-29)
-----------------------------
* Removed OSGi metadata because they didn't work properly
* Fixed an issue when setting up private method expectations with multiple arguments in Mockito.
* Added support for suppressing static initializers using TestNG (issue 256) (thanks to majorpetya for the patch).
* PowerMock Java agent works in Java 8 (issue 475) (thanks to iirekm for help).
* Moved bundled asm packages into the powermock package for the PowerMock Java Agent module to avoid classloading issues.

Change log 1.5.3 (2014-01-10)
-----------------------------
* Added OSGi metadata to manifest files (issue 204) (thanks to Gabor Liptak for patch)
* Upgraded to Javassist 3.18.1-GA.
* Test case with expectedExceptions no longer fails when using PowerMock with TestNG (issue 366) (thanks to majorpetya for the patch).