@@ -9,6 +9,7 @@ Change log next version
 * Improved java agent automatic bootstrap mechanism to work better for newer JDK's.
 * Improved Java 8 support. PowerMock now finds default methods (issue 513).
 * Annotations such as @Mock and @InjectMocks can now be used with the JUnit Java Agent.
+* Proxy framework is loaded from the the JUnit Java Agent which means that all Whitebox methods work as expected.
 
 Change log 1.5.5 (2014-05-28)
 -----------------------------
